--- a/app/globals.css
+++ b/app/globals.css
@@ -108,9 +108,9 @@ body,
   }
 }
 
-/* @ql-container {
-  font-size: 16px !important;
-} */
+.ql-container {
+  font-size: 15px !important;
+}
  
 /* @import "~@uploadthing/react/styles.css" */
 
